# plate_recognition

./: CMakeLists.txt  README.md  build.sh
src/: PlateRecoginition.hpp
